small tooltip changes, plus wrapping fixes for tooltip fields (#175)

--- a/src/UXClient/Components/Legend/Legend.scss
+++ b/src/UXClient/Components/Legend/Legend.scss
@@ -266,7 +266,8 @@
 			h4 {
 				cursor: pointer;
 				font-weight: 600;
-				font-size: 14px;
+				font-size: 15px;
+				font-family: "Segoe UI", sans-serif; 
 			}
 
 			.tsi-seriesName {
